--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,5 @@
   </li>
 </ul>
 
-<app-map-helper></app-map-helper>
+<app-map-helper [locationAccess] = true [showControl] = true></app-map-helper>
 
