--- a/src/app/components/map-helper/map-helper.component.html
+++ b/src/app/components/map-helper/map-helper.component.html
@@ -1,4 +1,4 @@
-<div class="content-geo-map-wrap">
+<div class="google-map-wrap">
 
   <div class="map-wrapper">
     <div id="map" class="google-map" style="height:100%; margin: 0"></div>
