--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,4 @@
   </li>
 </ul>
 
-<app-map-helper [locationAccess] = true [showControl] = true ></app-map-helper>
+<ngx-google-map-helper [locationAccess] = true [showControl] = true ></ngx-google-map-helper>
