--- a/projects/ngx-google-map-helper/src/lib/ngx-google-map-helper.component.html
+++ b/projects/ngx-google-map-helper/src/lib/ngx-google-map-helper.component.html
@@ -1,8 +1,6 @@
-<div class="google-map-wrap">
 
-    <div class="map-wrapper">
-      <div id="map" class="google-map" style="height:100%; margin: 0"></div>
-    </div>
-    
+<div class="map-wrapper" [ngStyle]="{'width': mapWidth, 'height': mapHeight}">
+  <div id="map" class="google-map" style="height:100%; margin: 0"></div>
 </div>
+
   
