--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1> Ngx Google Map Helper Demo</h1>
 
 <ngx-google-map-helper [locationAccess] = true [showControl] = true 
 [mapHeight] = "'1000px'" [mapWidth] = "'50%'"></ngx-google-map-helper>
